fix z-index

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -56,7 +56,7 @@ input{
 form{
     width: 110%;
     cursor: pointer;
-
+    
 }
 
 form input{
@@ -66,6 +66,7 @@ form input{
 form .fa{
     background: #27b5c2;
     color: white;
+    z-index: 99;
 }
 .autocomplete-items {
     max-height: 300px;
